# v4l2Camera

./: CMakeLists.txt  main.cpp  videodevice.cpp  videodevice.h
